package org.develop.Interface;

public interface LocationHandling {
    double calculateDistance();
    double estimateTravelTime();
}
