@startuml KlassediagramAB
' https://plantuml.com/class-diagram

package "A-B Søk innenfor en rute" {

class Stop {
    - stopId: String
    - location: String
    - name: String
    - departureTime: String
    - departureTimes: ArrayList<String>
    - timeAfterDeparture: int
    
    + calculateBusAtStop(String): String
    + findNextBus(...): String
    + calculateTravelTime(...): int
    + {static} findStopByName(...): Stop
    + {static} findNextBus(...): BusResult
}


class RouteLogic {
    + {static} findBestBus(...): BusResult
    + {static} findAllAlternatives(...): ArrayList<BusResult>
    + {static} calculateTotalTravelTime(...): int
    + {static} validateRoute(...): boolean
}

class Route {
    - routeId: String
    - routeName: String
    - transport: Transport
    - price: double
    - stops: ArrayList<Stop>
    
    + {static} calculateRoute(...): Route
}

class Transport {
    - transportId: String
    - capacity: int
    - startLocation: String
    - endLocation: String
    - departureTime: String
    - arrivalTime: String
    
    + calculateDistance(): double
    + estimateTravelTime(): double
}

interface LocationHandling {
    + calculateDistance(): double
    + estimateTravelTime(): double
}

' Relationships
Transport ..|> LocationHandling : implements

' Composition/Aggregation relationships
Route *-- Transport : contains
Route o-- Stop : uses

' Dependencies
Stop ..> RouteLogic : creates

}

@enduml
